# aigis

./: .env.example  .gitignore  .pre-commit-hooks.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  PENDING_DECISIONS.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
aigis/: __init__.py  _regex_guard.py  adversarial_loop.py  auto_fix.py  benchmark.py  cli.py  decoders.py  mcp_scanner.py  patterns.py  redteam.py  report.py  scanner.py  similarity.py  weekly_report.py
articles/: 20260429_comment_and_control_qiita.md  20260429_comment_and_control_zenn.md  agent-orchestration-multi-agent.md  ai-agent-security-landscape.md  ai-guardian-hook-troubleshooting.md  ai-guardian-v2-beyond-pattern-matching.md  ai-guideline-security-checklist.md  ai-guideline-v12-checklist-37.md  ai-meeting-data-leakage-risk.md  aigis-v004-self-audit.md  aigis-vs-microsoft-agent-governance.md  claude-code-cicd-pypi-oss.md  claude-code-team-governance.md  claude-mythos-enterprise-security.md  guideline-v12-what-companies-must-do.md  japanese-llm-security-gaps.md  litellm-supply-chain-attack.md  llm-security-tools-comparison-2026.md  mcp-server-trust-scoring.md  mcp-tool-poisoning-defense.md  mcp-tool-poisoning-supply-chain.md  meeting-ai-safety-answer.md  rag-indirect-prompt-injection-answer.md  weekly-ai-security-trends-20260411.md
backend/: Dockerfile  alembic.ini  pyproject.toml  render.yaml
content/: .~lock.PDCA_Schedule.xlsx#  PDCA_Schedule.xlsx  awesome_list_pr_drafts.md  growth_strategy.md  marketing_strategy.md  product_hunt_launch.md  product_hunt_strategy.md  qiita_draft.md  saas_monetization_design.md  show_hn_draft.md  show_hn_post.md  sns_profiles.md  twitter_posts.md  zenn_draft.md
docs/: BRAND_STRATEGY_2026.md  DEV_LOOP.md  PRODUCT_HUNT_COPY.md  api-reference.md  competitive-analysis-2026-04.md  competitive-pricing-analysis.md  configuration.md  getting-started.md  human-in-the-loop.md  middleware.md
examples/: README.md  basic_usage.py  custom_policy.py  fastapi_integration.py  langchain_integration.py  langgraph_integration.py  live_demo.py  openai_proxy.py  pre-commit-config-example.yaml
frontend/: DESIGN.md  Dockerfile  next.config.ts  package.json  tailwind.config.ts
images/: gallery_1_hero_en.html  gallery_1_hero_ja.html  gallery_2_architecture_en.html  gallery_2_architecture_ja.html  gallery_3_dashboard_en.html  gallery_3_dashboard_ja.html  gallery_4_integrations_en.html  gallery_4_integrations_ja.html  gallery_5_compliance_en.html  gallery_5_compliance_ja.html  gif_capture.py  ph_gallery_1_hero.html  ph_gallery_2_detection.html  ph_gallery_3_integrations.html  ph_snapshot.md  ph_thumbnail.html
policy_templates/: README.md  customer_support.yaml  developer_tools.yaml  ecommerce.yaml  education.yaml  eu_ai_act_high_risk.yaml  finance.yaml  healthcare.yaml  internal_tools.yaml
public/: 20260429_comment_and_control_qiita.md  20260429_comment_and_control_zenn.md  ai-guideline-v12-checklist-37.md  aigis-v004-self-audit.md  aigis-vs-microsoft-agent-governance.md  claude-mythos-enterprise-security.md  guideline-v12-what-companies-must-do.md  mcp-tool-poisoning-defense.md
scripts/: demo_recording.sh  sync_zenn_to_qiita.py
site/: blog.html  index.html  next.config.ts  package.json  tailwind.config.ts  vercel.json
tests/: test_activity.py  test_adversarial.py  test_adversarial_loop.py  test_aep.py  test_anthropic_proxy.py  test_audit.py  test_auto_fix.py  test_badge.py  test_behavioral_monitor.py  test_benchmark.py  test_claude_code_adapter.py  test_compliance.py  test_cross_session.py  test_decoders.py  test_fast_screen.py  test_filters.py  test_fsm.py  test_guard.py  test_imitation_detector.py  test_jailbreak_patterns.py  test_judge_manipulation.py  test_langgraph.py  test_mcp_scanner.py  test_mcp_stage_scanner.py  test_meeting_transcript.py  test_memory_poisoning.py  test_middleware.py  test_monitor_report.py  test_multi_agent.py  test_plugin_integrity.py  test_policy.py  test_prompt_leak_patterns.py  (+7 more)
(+314 files in other folders)
